--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "eject": "react-scripts-ts eject"
   },
   "devDependencies": {
-    "react-scripts-ts": "latest"
+    "react-scripts-ts": "latest",
+    "typescript": "^4.1.3"
   }
 }
