--- a/package.json
+++ b/package.json
@@ -3,11 +3,14 @@
   "version": "0.0.0",
   "private": true,
   "dependencies": {
-    "@types/react": "16.8.2",
-    "@types/react-dom": "16.8.0",
+    "@types/react": "^16.8.4",
+    "@types/react-dom": "^16.8.4",
     "moment": "^2.24.0",
-    "react": "16.8.0",
+    "react": "16.8.2",
+    "react-big-calendar": "^0.30.0",
+    "react-datepicker": "^3.3.0",
     "react-dom": "16.8.0",
+    "react-select": "3.1.0",
     "tslib": "^2.0.3"
   },
   "scripts": {
@@ -17,6 +20,9 @@
     "eject": "react-scripts-ts eject"
   },
   "devDependencies": {
+    "@types/react-big-calendar": "^0.24.8",
+    "@types/react-datepicker": "^3.1.2",
+    "@types/react-select": "^3.0.13",
     "react-scripts-ts": "latest",
     "typescript": "^4.1.3"
   }
